--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       id: cache-linux
       uses: actions/cache@v1
       with:
-        path: /home/runner/work/Columns/Columns/sfml
+        path: /home/runner/work/sfml
         key: cache-linux
 
     - name: Install dependencies
@@ -27,24 +27,24 @@ jobs:
     - name: CMake + make SFML
       if: steps.cache-linux.outputs.cache-hit != 'true'
       run: |
-        git clone -q --depth=1 --branch=2.5.x https://github.com/SFML/SFML.git /home/runner/work/Columns/Columns/sfml > /dev/null
-        git -C /home/runner/work/Columns/Columns/sfml pull > /dev/null
-        cd /home/runner/work/Columns/Columns/sfml
-        export CC=/usr/bin/gcc-10
-        export CXX=/usr/bin/g++-10
-        cmake /home/runner/work/Columns/Columns/sfml/CMakeLists.txt
+        git clone -q --depth=1 --branch=2.5.x https://github.com/SFML/SFML.git /home/runner/work/sfml > /dev/null
+        git -C /home/runner/work/sfml pull > /dev/null
+        cd /home/runner/work/sfml
+        export CC=/usr/bin/gcc-11
+        export CXX=/usr/bin/g++-11
+        cmake /home/runner/work/sfml/CMakeLists.txt
         sudo make install
 
     - name: Install SFML
       if: steps.cache-linux.outputs.cache-hit == 'true'
       run: |
-        cd /home/runner/work/Columns/Columns/sfml
+        cd /home/runner/work/sfml
         sudo make install
 
     - name: CMake + make Columns
       run: |
-        export CC=/usr/bin/gcc-10
-        export CXX=/usr/bin/g++-10
+        export CC=/usr/bin/gcc-11
+        export CXX=/usr/bin/g++-11
         cmake CMakeLists.txt
         make
 
@@ -75,7 +75,7 @@ jobs:
         msbuild Project.vcxproj /p:Configuration="Release Static NoMovie" /p:Platform=Win32
 
     - name: Create Columns.zip
-      run: 7z a Columns.zip "./Release Static NoMovie/Columns.exe" LICENSE.* README.* main.json gamefiles*
+      run: 7z a Columns.zip "./Release Static NoMovie/*.exe" LICENSE.* README.* main.json gamefiles*
 
     - name: Create artifact
       uses: actions/upload-artifact@v1
