- add VGM music support

--- a/.github/workflows/deploy_linux.yml
+++ b/.github/workflows/deploy_linux.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        vcpkg install physfs sfml --triplet=x64-linux
+        vcpkg install libgme[core,vgm] physfs sfml --triplet=x64-linux
 
     - name: Setup Ninja Build
       uses: turtlesec-no/get-ninja@main
