--- a/.github/workflows/deploy_windows.yml
+++ b/.github/workflows/deploy_windows.yml
@@ -22,7 +22,7 @@ jobs:
           core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
 
     - name: Install dependencies
-      run: vcpkg install physfs sfml --triplet=x86-windows-static
+      run: vcpkg install libgme[core,vgm] physfs sfml --triplet=x86-windows-static
 
     - name: Install UPX
       uses: crazy-max/ghaction-upx@v3
@@ -69,7 +69,7 @@ jobs:
           core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
 
     - name: Install dependencies
-      run: vcpkg install physfs sfml --triplet=x64-windows-static
+      run: vcpkg install libgme[core,vgm] physfs sfml --triplet=x64-windows-static
 
     - name: Install UPX
       uses: crazy-max/ghaction-upx@v3
